# NDK

./: build-profile.json5
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  TestVPN.h  cusSum.cpp  cusSum.h  hello.cpp  hello.h  httpRequest.cpp  httpRequest.h  napi_init.cpp
entry/src/main/cpp/3rd/openssl/include/openssl/: ec.h  ecdh.h  evp.h  obj_mac.h  opensslconf.h  sm1.h  sm2.h  ssl.h
entry/src/main/cpp/3rd/zlib/include/: zconf.h
entry/src/main/cpp/include/openssl/: configuration.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/myvpnextability/: MyVpnExtAbility.ets
entry/src/main/ets/pages/: Index.ets
feature/CCN/: oh-package-lock.json5  oh-package.json5
feature/CCN/src/main/: module.json5
feature/CCN/src/main/cpp/: CMakeLists.txt  napi_init.cpp
feature/CCN/src/main/cpp/types/libccn/: oh-package.json5
feature/CCN/src/main/ets/ccnability/: CCNAbility.ets
feature/CCN/src/main/ets/myvpnextability/: MyVpnExtAbility.ets
feature/CCN/src/main/ets/pages/: Index.ets
feature/CCN/src/main/resources/base/element/: string.json
feature/CCN/src/main/resources/base/profile/: myvpnextability.json
feature/CCN/src/main/resources/en_US/element/: string.json
feature/CCN/src/main/resources/zh_CN/element/: string.json
feature/CCN/src/mock/: mock-config.json5
feature/CCN/src/ohosTest/: module.json5
feature/ccnShared/: oh-package.json5
feature/ccnShared/src/main/: module.json5
feature/ccnShared/src/main/cpp/: CMakeLists.txt  napi_init.cpp
feature/ccnShared/src/main/cpp/types/libccnshared/: oh-package.json5
feature/ccnShared/src/main/ets/pages/: Index.ets
feature/ccnShared/src/ohosTest/: module.json5
product/default/: build-profile.json5  oh-package.json5
product/default/libs/moudule/: CCN-default-unsigned.hap
product/default/src/main/: module.json5
product/default/src/main/cpp/: CMakeLists.txt  TestVPN.cpp  hello.cpp  hello.h  httpRequest.cpp  napi_init.cpp
product/default/src/main/cpp/3rd/openssl/include/openssl/: comp.h  err.h  gmssl.h  modes.h  ossl_typ.h  point.h  sm3.h  sms4.h  ssl3.h  swsds.h  tls1.h
product/default/src/main/cpp/3rd/zlib/include/: zutil.h
product/default/src/main/ets/pages/: Index.ets
